# dpia-backend

./: .gitignore  Cargo.toml  README.md
migrations/: 20260314095643_Init.sql
src/: main.rs
static/: README  app.js  index.html  styles.css
