[package]
name = "dpia-backend"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = "fat"
codegen-units = 1

[dependencies]
anyhow = "1.0"
axum = "0.8"
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.47", features = ["rt-multi-thread", "macros", "signal"] }
tower-http = { version = "0.6", default-features = false, features = ["timeout"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
