[package]
name = "dpia-backend"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = "fat"
codegen-units = 1

[dependencies]
anyhow = "1.0.102"
axum = "0.8.9"
axum-client-ip = "1.3.1"
chrono = "0.4.44"
chrono-tz = "0.10.4"
dotenvy = "0.15.7"
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.52.1", features = ["rt-multi-thread", "macros", "signal"] }
tower-http = { version = "0.6.8", default-features = false, features = ["timeout"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
